syntax = "proto3";

package user;
  
option go_package = "./pb";

message UserRequest {
    string id = 1;
}
  
message UserResponse {
    string id = 1;
    string name = 2;
}
  
service users {
    rpc getUser(UserRequest) returns(UserResponse);
    rpc getAllUsers() returns (UserResponse[])
}
